# crypto_magneto_prod

./: .gitignore  pyproject.toml  start_celery.sh
app/: apps.py  models.py  tasks.py  urls.py
app/admin_registration/: __init__.py  db_monitoring_admin.py  registration_secondary.py
app/db_models/: __init__.py  db_monitoring_models.py  db_secondary.py
app/middlewares/: logfire_sql.py  video_range.py
app/migrations/: 0001_initial.py  0002_remove_coin_json_data_coin_image_delete_imagecoin.py  0003_category_label_coin_buys_h1_coin_buys_h24_and_more.py  0004_alter_coin_format_price.py  0005_alter_coin_format_price.py  0006_alter_coin_buys_h1_alter_coin_buys_h24_and_more.py  0007_explorerchain_coin_full_desc_chain_promotedcoin_and_more.py  0008_basecoin.py  0009_remove_chain_chain_id_and_more.py  0010_alter_coin_chain.py  0011_alter_coin_contract_address.py  0012_alter_coin_is_published_coinsocial.py  0013_rename_image_coinsocial_image.py  0014_remove_coin_security_rank_alter_coinsocial_name.py  0015_auditprovider_auditstatus_safetyandaudit.py  0016_rename_security_rank_safetyandaudit_security_score.py  0017_alter_safetyandaudit_security_score.py  0018_coin_circulating_supply_coin_launch_price_and_more.py  0019_remove_coin_gugu_rank_remove_coin_gugu_score_and_more.py  0020_remove_coin_buys_h1_remove_coin_buys_h24_and_more.py  0021_coin_high_24h_price_coin_low_24h_price.py  0022_coinprediction.py  0023_teamcoin_coin_team.py  0024_alter_coin_market_cap.py  (+2 more)
scripts/: check_redis_task.py  redis_cache_inspect.py  test_script.py
src/: celery.py  urls.py
(+156 files in other folders)
